install/tetragon-ti/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetragon-ti-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tetragon-ti
  ports:
  - name: tetragon-ti-influx-port
    protocol: TCP
    port: 8086
    targetPort: influx-port
