install/tetragon-ti/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ti
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /influxdb
        pathType: Prefix
        backend:
          service:
            name: tetragon-ti-service
            port: 
              number: 8086
